<resources>
    <string name="app_name">RoomListPractice</string>
    <string name="search">Search</string>
    <string name="no_items">Add some new tasks</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="todo_list">Todo List</string>
    <string name="task">Task</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading...</string>
</resources>
