<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.detail.DetailActivity">

    <TextView
        android:id="@+id/taskTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp15"
        android:text="@string/task"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:background="@drawable/search_bg"
        android:hint="@string/title"
        android:padding="@dimen/dp10"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskTV" />


    <EditText
        android:id="@+id/descEditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp150"
        android:layout_margin="@dimen/dp10"
        android:background="@drawable/search_bg"
        android:gravity="start"
        android:hint="@string/description"
        android:maxLines="5"
        android:padding="@dimen/dp10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleEditText" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:background="@color/colorPrimaryDark"
        android:layout_margin="@dimen/dp10"
        android:textColor="@color/colorWhite"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/cancelButton"
        app:layout_constraintTop_toBottomOf="@+id/descEditText" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:layout_margin="@dimen/dp10"
        app:layout_constraintLeft_toRightOf="@+id/addButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>