<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.home.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_list"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/addButton"
        app:layout_constraintBottom_toBottomOf="@id/addButton"
        />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:clickable="true"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:layout_margin="@dimen/dp15"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true" />

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/search"
        android:background="@drawable/search_bg"
        android:layout_margin="@dimen/dp10"
        android:padding="@dimen/dp10"
        android:visibility="gone"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_items"
        app:layout_constraintTop_toBottomOf="@+id/searchEditText"
        app:layout_constraintLeft_toLeftOf="@+id/searchEditText"
        app:layout_constraintRight_toRightOf="@+id/searchEditText"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/taskRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp10"
        android:visibility="gone"
        android:background="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchEditText"
        app:layout_constraintLeft_toLeftOf="@+id/searchEditText"
        app:layout_constraintRight_toRightOf="@+id/searchEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>